# Vatnestrom

./: .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  docker-compose.yml  main.py  pyproject.toml  test_main.http
.claude/: settings.local.json
app/api/routes/: auth.py  backtest.py
app/core/: config.py
app/db/: database.py  models.py
app/services/: auth.py  backtest.py  data.py
app/services/datasources/: __init__.py  alphavantage.py  base.py  sina.py  tickflow.py  tushare.py  twelvedata.py  yahoo.py
app/strategies/: __init__.py  atr_channel.py  base.py  bollinger.py  donchian.py  kdj.py  ma_cross.py  macd.py  mean_reversion.py  rsi.py  supertrend.py  utils.py
docs/: AboutVectorBt.md  chart.md  策略管理.md
frontend/: index.html  package.json
frontend/src/: App.css  App.tsx  api.ts  index.css  strategies.ts  types.ts
frontend/src/components/: BacktestForm.tsx  BatchSummaryTable.tsx  Chart.tsx  LangToggle.tsx  StatsPanel.tsx  StrategyForm.tsx  TradesTable.tsx
frontend/src/i18n/: en.ts  index.tsx  zh.ts
frontend/src/pages/: StrategyList.tsx  StrategyPage.tsx
tests/: locustfile.py  test_serialize.py
tests/strategies/: test_ma_cross.py
