[project]
name = "vectorbtpalyground"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.135.1",
    "uvicorn>=0.42.0",
    "vectorbt>=0.26.2",
    "yfinance>=0.2.18",
]

[dependency-groups]
dev = [
    "locust>=2.32.6",
    "pytest>=9.0.2",
]
