[project]
name = "vectorbtpalyground"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.13"
dependencies = [
    "aiofiles>=24.1.0",
    "fastapi>=0.135.1",
    "pandas-ta>=0.4.71b0",
    "python-dotenv>=1.2.2",
    "tickflow>=0.1.18",
    "uvicorn>=0.42.0",
    "vectorbt>=0.26.2",
    "yfinance>=0.2.18",
    "sqlalchemy>=2.0",
    "psycopg2-binary>=2.9",
    "bcrypt>=4.0",
    "python-jose[cryptography]>=3.3",
    "email-validator>=2.0",
    "python-multipart>=0.0.20",
    "tushare>=1.4.29",
]

[dependency-groups]
dev = [
    "locust>=2.32.6",
    "pytest>=9.0.2",
]
